1999-03-20 (19:40) Alex Roberts  <bse@dial.pipex.com>

	* menus.c:
	  commands.[ch]: (window_new_cb): Use gnome_mdi_open_toplevel() to create a
	  new window. We now have the "Create new window" feature back! YAY!

	* gE_mdi.[ch]:
	  gedit.c: (main) Added signal connections for add_view and add_child. They
	  dont do anything yet, and i'm not sure if they ever will.

1999-03-16 (20:46) Alex Roberts  <bse@dial.pipex.com>

	* gE_mdi.c: (gE_add_view) Duplicate the text from the child into the new
	  view. They don't simultaineously update tho.. Checking if the document has
	  changed is working again tho :) 

1999-03-14 (23:46) Alex Roberts  <bse@dial.pipex.com>

	* gE_prefs.c: (get_settings)
	  gE_document.c: (gE_window_set_status_bar) Use current (mdi)active_window
	  to access the builtin GnomeApp statusbar member. Statusbar toggle is back!
	  yay! Window doesnt refresh tho, leaving a gap (until the window is resized
	  that is).. Ah well..
	
1999-03-14 (19:46) Alex Roberts  <bse@dial.pipex.com>

	* commands.c: (file_quit_cb) If user presses cancel on mdi_remove_all, then
	  we shouldn't close the app! And so, we don't.
	
1999-03-14 (19:01) Alex Roberts  <bse@dial.pipex.com>

	* main.h:
	  gE_document.c:
	  gE_files.c:
	  commands.[ch]: Converted all the respective recent document functions to
	  using GnomeApp pointers, instead of gE_window's. Recent Documents list
	  is back! Yay!

1999-03-14 (18:02) Alex Roberts  <bse@dial.pipex.com>

	* gE_document: (gE_document_set_read_only) Use gnome_mdi_child_set_name
	  instead of setting the old (now defunct) tab label. 
	  Read Only documents are BACK! yay!

1999-03-14 (00:02) Alex Roberts  <bse@dial.pipex.com>

	* gedit.c: (main) Doh.. open the toplevel first, before makeing a new
	  document.. Now we don't get two windows open on startup (if we specify
	  a file to open, or just have a plain file on startup).. Yippee!

1999-03-13 (23:46) Alex Roberts  <bse@dial.pipex.com>

	* menus.c: